daikoku/javascript/src/style/layout/style.scss
@use "../variables";
@use "sass:color";

body {
  font-family: Custom, Raleway, Helvetica, sans-serif;
  background-color: variables.$level1_bg-color;
  color: variables.$level1_text-color;
  font-size: 1rem;
}

main {
  background-color: variables.$level1_bg-color;
}

[role="root-container"] {
  padding-top: 130px;

  @media screen and (min-width: 576px) {
    padding-top: 90px;
  }

  @media screen and (min-width: 768px) {
    padding-top: 60px;
  }
}

.danger-color {
  color: variables.$danger-color
}

.section,
.album {
  background-color: variables.$level2_bg-color;
  color: variables.$level2_text-color;
}

//remove blue border on chrome
*:focus {
  outline: 0;
}

a {
  text-decoration: none;
}

.a-fake,
a {
  color: variables.$level1_link-color;
}

.a-fake,
a {
  &.underline {
    text-decoration: underline;
  }
}

.a-fake {
  cursor: pointer;
}

.a-fake:hover,
a:hover {
  color: variables.$level1_link-hover-color;
}

.underline-on-hover:hover,
.underline {
  text-decoration: underline;
}

a.nav-link.active {
  background-color: rgb(233, 236, 239);
}

.link__disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.cursor-pointer {
  cursor: pointer;
}

.cursor-help {
  cursor: help;
}

.cursor-forbidden {
  cursor: not-allowed;
}

hr {
  border-top-color: variables.$form-border-color;
}

.word-break {
  word-break: break-all;
}

.hide {
  display: none;
}

.user-logo {
  background-color: white;
}

.fa-xxs {
  font-size: 0.5em;
}

.lead {
  white-space: pre-wrap;
}

.api-description>p {
  text-align: justify;
  white-space: pre-wrap;
}

.hr-apidescription {
  width: 100%;
  border-bottom: 1px solid #bbbbbb;
  border-top: 0;
  margin-top: 5px;
  margin-bottom: 5px;
}

.changePicture {
  position: absolute;
  display: none;
  top: 0;
}

img:hover+.changePicture, .avatar-without-img:hover+.changePicture,
.changePicture:hover {
  display: block;
  opacity: 0.5;
}

.bg-success {
  background-color: variables.$success-color;
}
.bg-info {
  background-color: variables.$info-color;
}
.bg-danger {
  background-color: variables.$danger-color;
}
.color-success {
  color: variables.$success-color;
}
.color-info {
  color: variables.$info-color;
}
.color-danger {
  color: variables.$danger-color;
}


/* rwd */
@media screen and (min-width: 576px) {
  .col-form-label {
    text-align: right;
  }
}

.impersonator-topbar-mb {
  @media screen and (max-width: 1100px) {
    margin-bottom: 20px;
  }

  @media screen and (max-width: 768px) {
    margin-bottom: 80px;
  }

  @media screen and (max-width: 540px) {
    margin-bottom: 40px;
  }
}

@media screen and (max-width: 540px) {
  .nav-tabs {
    .nav-tabs .nav-item:first-child {
      border-top-left-radius: 5px;
      border-top-right-radius: 5px;
    }

    .nav-item.show .nav-link,
    .nav-link.active {
      background-color: variables.$btn-bg-color;
    }
  }

  .onglets {
    padding-left: 15px;
  }

  .pricing-content {
    margin-top: 20px;
  }

  .h1-rwd-reduce {
    font-size: 1.8rem;
  }
}

.ohnohoney {
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  height: 0;
  width: 0;
  z-index: -1;
}

.wrapper:not(.information-container) {
  height: calc(100vh - variables.$topbar-height);
  overflow: visible;

  margin-top: 50px;
}

.companion-link {
  color: variables.$companion_link-color;

  &:hover {
    background-color: variables.$companion_text-hover-bg-color;
    color: variables.$companion_text-hover-color;
  }
}

.level1-link {
  color: variables.$level1_link-color;

  &:hover {
    color: variables.$level1_link-hover-color;
  }
}

.level1 {
  background-color: variables.$level1_bg-color;
  color: variables.$level1_text-color;
}

.level2 {
  background-color: variables.$level2_bg-color;
  color: variables.$level2_text-color;
}

.level2-link {
  color: variables.$level2_link-color;

  &:hover {
    color: variables.$level2_link-hover-color;
  }

  &__with-bg:hover {
    cursor: pointer;
    background-color: color-mix(in srgb, variables.$level2_bg-color 90%, black);
    color: variables.$btn-bg-color;
  }

  &__active-bg {
    color: variables.$btn-text-color;
    background-color: variables.$btn-bg-color;
    border: 1px solid variables.$btn-border-color;
  }
}


.level3 {
  background-color: variables.$level3_bg-color;
  color: variables.$level3_text-color;
}

.level3-link {
  color: variables.$level3_link-color;

  &:hover {
    color: variables.$level3_link-hover-color;
    background-color: variables.$level3_link-hover-bg-color;
  }
}

.flew-grow {
  flex: 1;
}

.pill-button {
  display: flex;
  // border: 1px solid #fff;
  width: fit-content;
  border-radius: 24px;
  background: #fff;
}

.pill-container {
  display: flex;
  border-radius: 24px;
  position: relative;
  width: fit-content;
}

.pill-mode {
  font-size: 1rem;
  border: none;
  padding: .75rem;
  text-align: center;
  background: none;
  z-index: 21;
  position: relative;
  min-width: 110px;
  flex: 1;
  white-space: nowrap;
  color: #fff;
}

.pill-mode-right {
  left: calc(50% - 4px) !important;
  width: 50% !important;
}

.pill-cursor {
  transition: left 0.25s;
  position: absolute;
  background-color: #000;
  color: variables.$level1_text-color;
  top: 0;
  bottom: 0;
  left: 0;
  border-radius: 24px;
  width: calc(50%);
  z-index: 20;
}

